[workspace]

[package]
name = "crusts-notxl"
version = "0.0.3"
edition = "2021"
authors = [
    "Michael Ling <michael.ling@huawei.com>",
    "Yijun Yu <y.yu@open.ac.uk>",
    "Haitao Wu <haitao.wu@huawei.com>",
    "Yuan Wang <yuan.wang@huawei.com>",
    "James R. Cordy <cordy@cs.queensu.ca>",
    "Ahmed E. Hassan <hassan@queensu.ca>",
    "Xiping Huang <xphuang@smu.edu.sg>",
]
description = "CRustS - From Unsafe C to safer Rust"
repository = "https://github.com/sheldonhh/crusts"
documentation = "https://docs.rs/crusts-sg"
keywords = ["rust", "c2rust", "refactoring"]
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
jwalk = "0.8"
flate2 = "1.0.25"
tar = "0.4.38"
uuid = { version = "1.3.0", features = ["v4"] } 
txl-rs = "0.0.3"

[dev-dependencies]
insta = "1.23.0"
